--- a/examen5P2_HectorRivera/src/examen5p2_hectorrivera/examen5P2_HectorRivera.form
+++ b/examen5P2_HectorRivera/src/examen5p2_hectorrivera/examen5P2_HectorRivera.form
@@ -661,6 +661,7 @@
                       </Properties>
                       <Events>
                         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton_modificarMouseClicked"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_modificarActionPerformed"/>
                       </Events>
                     </Component>
                   </SubComponents>
